<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	
	<data>
		
		<variable
			name="viewModel"
			type="co.aresid.book13.fragments.addbook.AddBookViewModel"
			/>
		
		<import type="co.aresid.book13.Util.DatePickerVariant"/>
	</data>
	
	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		>
		
		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/constraint_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			>
			
			<TextView
				android:id="@+id/fragment_header_text_view"
				style="@style/AppTheme.Widget.TextView.FragmentHeaderTextView"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/add_a_book"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toTopOf="@id/guideline_top"
				/>
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/book_title_layout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="2.5dp"
				android:hint="@string/title"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toBottomOf="@id/fragment_header_text_view"
				>
				
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/book_title_edit_text"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:imeActionId="100"
					android:imeOptions="actionNext"
					android:inputType="textCapSentences"
					android:text="@={viewModel.bookTitle}"
					app:clearText="@{viewModel.clearAllEditTextFields}"
					/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/book_author_layout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="2.5dp"
				android:hint="@string/author"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toBottomOf="@id/book_title_layout"
				>
				
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/book_author_edit_text"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:imeActionId="101"
					android:imeOptions="actionNext"
					android:inputType="textPersonName"
					android:text="@={viewModel.bookAuthor}"
					app:clearText="@{viewModel.clearAllEditTextFields}"
					/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.textfield.TextInputLayout
				android:id="@+id/book_page_count_layout"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="2.5dp"
				android:hint="@string/number_of_pages"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toBottomOf="@id/book_author_layout"
				>
				
				<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/book_page_count_edit_text"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:imeActionId="102"
					android:imeOptions="actionDone"
					android:inputType="numberDecimal"
					android:text="@={viewModel.bookPages}"
					app:clearText="@{viewModel.clearAllEditTextFields}"
					/>
			</com.google.android.material.textfield.TextInputLayout>
			
			<com.google.android.material.button.MaterialButton
				android:id="@+id/add_book_button"
				style="@style/Widget.MaterialComponents.Button"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="2.5dp"
				android:onClick="@{(v) -> viewModel.addBook(v)}"
				android:text="@string/add_the_book"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toBottomOf="@id/finish_date_edit_image_button"
				/>
			
			<TextView
				android:id="@+id/start_text_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/start_colon"
				app:layout_constraintBottom_toBottomOf="@id/start_date_edit_image_button"
				app:layout_constraintEnd_toStartOf="@id/start_date_text_view"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toTopOf="@id/start_date_edit_image_button"
				/>
			
			<TextView
				android:id="@+id/start_date_text_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="@id/start_date_edit_image_button"
				app:layout_constraintEnd_toStartOf="@id/start_date_edit_image_button"
				app:layout_constraintStart_toEndOf="@id/start_text_view"
				app:layout_constraintTop_toTopOf="@id/start_date_edit_image_button"
				/>
			
			<ImageButton
				android:id="@+id/start_date_edit_image_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="2.5dp"
				android:background="?android:attr/selectableItemBackgroundBorderless"
				android:onClick="@{() -> viewModel.renderDatePickerDialog(DatePickerVariant.START)}"
				android:padding="5dp"
				android:src="@drawable/ic_sharp_edit_24"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toEndOf="@id/start_date_text_view"
				app:layout_constraintTop_toBottomOf="@id/book_page_count_layout"
				/>
			
			<TextView
				android:id="@+id/finish_text_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/finish_colon"
				app:layout_constraintBottom_toBottomOf="@id/finish_date_edit_image_button"
				app:layout_constraintEnd_toStartOf="@id/start_date_text_view"
				app:layout_constraintStart_toStartOf="@id/guideline_start"
				app:layout_constraintTop_toTopOf="@id/finish_date_edit_image_button"
				/>
			
			<TextView
				android:id="@+id/finish_date_text_view"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				app:layout_constraintBottom_toBottomOf="@id/finish_date_edit_image_button"
				app:layout_constraintEnd_toStartOf="@id/finish_date_edit_image_button"
				app:layout_constraintStart_toEndOf="@id/start_text_view"
				app:layout_constraintTop_toTopOf="@id/finish_date_edit_image_button"
				/>
			
			<ImageButton
				android:id="@+id/finish_date_edit_image_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="2.5dp"
				android:background="?android:attr/selectableItemBackgroundBorderless"
				android:onClick="@{() -> viewModel.renderDatePickerDialog(DatePickerVariant.FINISH)}"
				android:padding="5dp"
				android:src="@drawable/ic_sharp_edit_24"
				app:layout_constraintEnd_toEndOf="@id/guideline_end"
				app:layout_constraintStart_toEndOf="@id/finish_date_text_view"
				app:layout_constraintTop_toBottomOf="@id/start_date_edit_image_button"
				/>
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_top"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_begin="@dimen/guideline_margin_small"
				/>
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_end"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="vertical"
				app:layout_constraintGuide_end="@dimen/guideline_margin_large"
				/>
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_bottom"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				app:layout_constraintGuide_end="@dimen/guideline_margin_small"
				/>
			
			<androidx.constraintlayout.widget.Guideline
				android:id="@+id/guideline_start"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:orientation="vertical"
				app:layout_constraintGuide_begin="@dimen/guideline_margin_large"
				/>
		
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.core.widget.NestedScrollView>
</layout>