<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	
	<data>
		
		<variable
			name="viewModel"
			type="co.aresid.book13.fragments.starttracking.StartTrackingViewModel"
			/>
		
		<import type="co.aresid.book13.Util.DatePickerVariant"/>
	</data>
	
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraint_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>
		
		<TextView
			android:id="@+id/fragment_header_text_view"
			style="@style/AppTheme.Widget.TextView.FragmentHeaderTextView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/start_tracking"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintTop_toTopOf="@id/guideline_top"
			/>
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/book_title_layout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2.5dp"
			android:hint="@string/book"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintTop_toBottomOf="@id/fragment_header_text_view"
			>
			
			<com.google.android.material.textfield.MaterialAutoCompleteTextView
				android:id="@+id/book_title_auto_complete_text_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:imeActionId="100"
				android:imeOptions="actionNext"
				android:inputType="text"
				/>
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/book_author_layout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2.5dp"
			android:hint="@string/start_page_count"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintTop_toBottomOf="@id/book_title_layout"
			>
			
			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:imeActionId="101"
				android:imeOptions="actionNext"
				android:inputType="numberDecimal"
				android:text="@{viewModel.startPageCount}"
				/>
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/book_page_count_layout"
			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2.5dp"
			android:hint="@string/finish_page_count"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintTop_toBottomOf="@id/book_author_layout"
			>
			
			<com.google.android.material.textfield.TextInputEditText
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:imeActionId="102"
				android:imeOptions="actionDone"
				android:inputType="numberDecimal"
				android:text="@{viewModel.finishPageCount}"
				/>
		</com.google.android.material.textfield.TextInputLayout>
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/add_start_date_button"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2.5dp"
			android:text="@string/start_date_colon"
			app:icon="@drawable/ic_sharp_add_24"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintTop_toBottomOf="@id/book_page_count_layout"
			/>
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/add_finish_date_button"
			style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2.5dp"
			android:text="@string/finish_date_colon"
			app:icon="@drawable/ic_sharp_add_24"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintTop_toBottomOf="@id/add_start_date_button"
			/>
		
		<com.google.android.material.button.MaterialButton
			android:id="@+id/add_book_button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="2.5dp"
			android:onClick="@{() -> viewModel.addBook()}"
			android:text="@string/start_tracking"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintTop_toBottomOf="@id/add_finish_date_button"
			/>
		
		<TextView
			android:id="@+id/start_text_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/start_colon"
			app:layout_constraintBottom_toBottomOf="@id/start_date_edit_image_button"
			app:layout_constraintEnd_toStartOf="@id/start_date_text_view"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintTop_toTopOf="@id/start_date_edit_image_button"
			/>
		
		<TextView
			android:id="@+id/start_date_text_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="@id/start_date_edit_image_button"
			app:layout_constraintEnd_toStartOf="@id/start_date_edit_image_button"
			app:layout_constraintStart_toEndOf="@id/start_text_view"
			app:layout_constraintTop_toTopOf="@id/start_date_edit_image_button"
			/>
		
		<ImageButton
			android:id="@+id/start_date_edit_image_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="2.5dp"
			android:background="?android:attr/selectableItemBackgroundBorderless"
			android:onClick="@{() -> viewModel.renderDatePickerDialog(DatePickerVariant.START)}"
			android:padding="5dp"
			android:src="@drawable/ic_sharp_edit_24"
			app:layout_constraintBottom_toBottomOf="@id/add_start_date_button"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			app:layout_constraintStart_toEndOf="@id/start_date_text_view"
			app:layout_constraintTop_toTopOf="@id/add_start_date_button"
			/>
		
		<TextView
			android:id="@+id/finish_text_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/finish_colon"
			app:layout_constraintBottom_toBottomOf="@id/finish_date_edit_image_button"
			app:layout_constraintEnd_toStartOf="@id/start_date_text_view"
			app:layout_constraintStart_toStartOf="@id/guideline_start"
			app:layout_constraintTop_toTopOf="@id/finish_date_edit_image_button"
			/>
		
		<TextView
			android:id="@+id/finish_date_text_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="@id/finish_date_edit_image_button"
			app:layout_constraintEnd_toStartOf="@id/finish_date_edit_image_button"
			app:layout_constraintStart_toEndOf="@id/start_text_view"
			app:layout_constraintTop_toTopOf="@id/finish_date_edit_image_button"
			/>
		
		<ImageButton
			android:id="@+id/finish_date_edit_image_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="2.5dp"
			android:background="?android:attr/selectableItemBackgroundBorderless"
			android:onClick="@{() -> viewModel.renderDatePickerDialog(DatePickerVariant.FINISH)}"
			android:padding="5dp"
			android:src="@drawable/ic_sharp_edit_24"
			app:layout_constraintBottom_toBottomOf="@id/add_finish_date_button"
			app:layout_constraintEnd_toEndOf="@id/guideline_end"
			app:layout_constraintStart_toEndOf="@id/finish_date_text_view"
			app:layout_constraintTop_toTopOf="@id/add_finish_date_button"
			/>
		
		<androidx.constraintlayout.widget.Group
			android:id="@+id/add_start_date_button_group"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:visibility="invisible"
			app:constraint_referenced_ids="add_start_date_button"
			/>
		
		<androidx.constraintlayout.widget.Group
			android:id="@+id/add_finish_date_button_group"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:visibility="invisible"
			app:constraint_referenced_ids="add_finish_date_button"
			/>
		
		<androidx.constraintlayout.widget.Group
			android:id="@+id/start_date_group"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:visibility="visible"
			app:constraint_referenced_ids="start_text_view, start_date_text_view, start_date_edit_image_button"
			/>
		
		<androidx.constraintlayout.widget.Group
			android:id="@+id/finish_date_group"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:visibility="visible"
			app:constraint_referenced_ids="finish_text_view, finish_date_text_view, finish_date_edit_image_button"
			/>
		
		
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_top"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_begin="@dimen/guideline_margin_small"
			/>
		
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_end"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical"
			app:layout_constraintGuide_end="@dimen/guideline_margin_large"
			/>
		
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_bottom"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_end="@dimen/guideline_margin_small"
			/>
		
		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guideline_start"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="@dimen/guideline_margin_large"
			/>
	
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>